ocaml/testsuite/tests/templates/basic/bad_ref_direct.reference
File "bad_ref_direct.ml", line 3, characters 12-21:
3 | let empty = Monoid.id
                ^^^^^^^^^
Error: The file "monoid.cmi" contains the interface of a parameter.
       "Monoid" is not declared as a parameter for the current unit (-parameter "Monoid").
